--- a/OrganizzeClone/app/build.gradle
+++ b/OrganizzeClone/app/build.gradle
@@ -48,4 +48,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:25.12.0')
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-database'
+
+    //Float Action Button
+    implementation 'com.github.clans:fab:1.6.4'
 }
