--- a/OrganizzeClone/app/src/main/AndroidManifest.xml
+++ b/OrganizzeClone/app/src/main/AndroidManifest.xml
@@ -10,11 +10,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OrganizzeClone">
         <activity
+            android:name=".activity.DespesasActivity"
+            android:theme="@style/despesasTheme"/>
+        <activity
+            android:name=".activity.ReceitasActivity"
+            android:theme="@style/receitasTheme"/>
+        <activity
             android:name=".activity.PrincipalActivity"
             android:label="@string/title_activity_principal"
-            android:theme="@style/Theme.OrganizzeClone.NoActionBar"></activity>
-        <activity android:name=".activity.CadastroActivity" />
-        <activity android:name=".activity.LoginActivity" />
+            android:theme="@style/Theme.OrganizzeClone.NoActionBar" />
+        <activity
+            android:name=".activity.CadastroActivity" />
+        <activity
+            android:name=".activity.LoginActivity" />
         <activity
             android:name=".activity.MainActivity"
             android:theme="@style/Theme.Intro">
